# scqat

./: .gitignore  CLAUDE.md  MIGRATION.md  README.md  pyproject.toml
.github/: copilot-instructions.md
analysis/: _harness.py  try_power_rabi_new.py  try_qubit_spectroscopy_flux_new.py  try_qubit_spectroscopy_new.py  try_ramsey_new.py  try_readout_fidelity_new.py  try_readout_fidelity_synthetic.py  try_readout_frequency_new.py  try_readout_power_new.py
notebooks/: RO_charge_power_with_ref.ipynb  RO_charge_power_with_ref_check.ipynb  ac_stark_readout.ipynb  ac_stark_spectroscopy.ipynb  charge_gate_ramsey.ipynb  charge_gate_ramsey_batch.ipynb  charge_gate_ramsey_plot_payload.h5  charge_track_and_combine.ipynb  qc_swap_paramreset_collisional.ipynb  qc_unidirectional_coupling_cascaded.ipynb  qubit_spectroscopy.ipynb  ramsey.ipynb  readout_frequency_optimization.ipynb  state_discrimination.ipynb  time_of_flight_damped_osc.ipynb
scqat/: __init__.py
scqat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
temp/: CPW_impedance.ipynb  Readout_pulse_shaping.py  sweep_pulse_shape.py  sweep_step_du.py
tests/: Readout_pulse_shaping.py  test_discriminate.py  test_fit_abscos.py  test_fit_cosine.py  test_fit_exp_decay.py  test_fit_lorentzian.py  test_fit_multi_damped_oscillation.py  test_fit_powerlaw_base.py  test_fit_qubit_decoherence.py  test_fit_transmon_freq_flux.py  test_flux_ref_scope.py  test_hankel_analysis.py  test_iq_plane.py  test_iq_reduce.py  test_no_estimator_layering.py  test_parametric_drive_decoherence_estimator.py  test_parametric_drive_resonance_estimator.py  test_peak_fit.py  test_peak_map.py  test_power_rabi_estimator.py  test_qubit_echo_estimator.py  test_qubit_flux_arch_estimator.py  test_qubit_relaxation_estimator.py  test_qubit_spectroscopy_estimator.py  test_ramsey_estimator.py  test_ramsey_fit.py  test_readout_fidelity.py  test_resonator_spectroscopy_flux_composite.py  test_resonator_spectroscopy_power_estimator.py  test_resonator_spectroscopy_vs_power_estimator.py  test_stored_positions.py  (+3 more)
(+199 files in other folders)
