[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scqat"
version = "0.2.0"  # MUST equal the release tag (tag vX.Y.Z <-> version X.Y.Z); bump BEFORE tagging.
                   # Dependents pin real floors (scqo: "scqat>=0.1.5") via importlib.metadata, so a tag
                   # whose tree still says the old version breaks their installs. (Tags v0.1.0-v0.1.4
                   # all shipped metadata 0.1.0 -- floors only work from v0.1.5 on.)
description = "Superconducting qubit analysis tool for experimental data pipelines."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9",
    "xarray>=2024.6.0",
    "lmfit>=1.2.0",
    "scikit-learn>=1.3.0",
    # "juliacall>=0.9.0"  # Uncomment later if you drop in Julia for heavy MIST simulations
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scqat*"]